Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-25944

[Reg 4.15->5.0] cannot copy editor color scheme

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • Qt Creator 5.0.0-beta1
    • Qt Creator 5.0.0-beta1
    • Editors
    • None
    • 8bef120f14fd4dd543a1cd8c83e0cbb4c0a32465 (qt-creator/qt-creator/5.0)

      steps to reproduce:

      • open options / text editor
      • select color scheme
      • press "copy..." button
      • select new name

      expected behaviour:
      color scheme has been copied to the new name

      actual behaviour:
      no new color scheme has been created

        For Gerrit Dashboard: QTCREATORBUG-25944
        # Subject Branch Project Status CR V

            davschul David Schulz
            timblechmann tim blechmann
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes